@@ -19,6 +19,7 @@
 * Updated the plugin description and information about its features.
 * Updated the plugin's settings screen and information displayed.
 * Moved the plugin's menu to the Groups menu (unless if Groups is missing in which case it is displayed under Settings).
+* Adds the option to lock the WordPress admin dashboard.
 
 = 1.3.0 =
 * WordPress 5.7 compatible.
